syntax = "proto3";

package model;
import "google/protobuf/Empty.proto";

service ParkingService{
    rpc GenerateId(google.protobuf.Empty) returns (ParkIn){}
    rpc ParkOut(InputData) returns (Output){}
}

message ParkIn{
    string Id = 1;
    string Time =2;
}


message InputData{
    string Id = 1;
    string Platno = 2;
    string Tipe = 3;
}

message Output{
    string Id = 1;
    string Platno = 2;
    string Message = 4;
    string Duration = 3;
}

